// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entry reviews E2E tests when reviewing dive site will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 5,
      "message": "Number must be less than or equal to 5",
      "path": [
        "rating",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "difficulty",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "comments",
      ],
      "received": "boolean",
    },
  ],
}
`;

exports[`Log entry reviews E2E tests when reviewing dive site will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "rating",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entry reviews E2E tests when reviewing operator will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "comments",
      ],
      "received": "boolean",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 5,
      "message": "Number must be less than or equal to 5",
      "path": [
        "rating",
      ],
      "type": "number",
    },
  ],
}
`;

exports[`Log entry reviews E2E tests when reviewing operator will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "rating",
      ],
      "received": "undefined",
    },
  ],
}
`;
